--- a/popUp message/styles.css
+++ b/popUp message/styles.css
@@ -35,7 +35,7 @@ column-gap: 2em;
     text-align: center;
 }
 
-#msg-container {
+.msg-container {
     width: 100%;
     height: 125px;
     text-align: center;
@@ -50,7 +50,7 @@ column-gap: 2em;
     margin: 0.25em 0.25em;
 }
 
-#close{
+.close{
     color: #fff;
     background: rgb(255, 60, 60);
     border: 2px solid rgba(119, 22, 22, 0.301);
@@ -60,4 +60,10 @@ column-gap: 2em;
 
 #msg{
     margin-top: 1.75em;
+}
+
+.hidden{
+    background: #fff;
+    color: #fff;
+    border: #fff;
 }
