--- a/functionator/styles.css
+++ b/functionator/styles.css
@@ -24,6 +24,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 #movable-object{
@@ -35,4 +36,5 @@
     justify-content: center;
     align-items: center;
     font-size: 1.25rem;
+    position: absolute;
 }
