--- a/hulu clone/styles.css
+++ b/hulu clone/styles.css
@@ -128,3 +128,68 @@ a:hover {
     background-color: rgba(255, 255, 255, 0);
     padding: 1em 2em;
 }
+
+#tv-shows {
+    width: 100%;
+    height: 120vh;
+    background: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    row-gap: 2em;
+}
+
+.section-heading {
+    color: #fff;
+    font-size: 4rem;
+}
+
+#tv-shows-container{
+    display: flex;
+    column-gap: 2em;
+}
+
+.tv-show {
+    width: 18vw;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    color: #fff;
+}
+
+.tv-show-text {
+    margin: 0.75em 0.75em 0 0.75em;
+}
+
+.tv-show-heading{
+    font-size: 1.6rem;
+    margin-left: 0.45em;
+}
+
+#bob {
+    background: url(images/tv-shows/bobs-bg.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+#us {
+    background: url(images/tv-shows/us-bg.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+#npstrangers {
+    background: url(images/tv-shows/npstrangers-bg.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+#billions {
+    background: url(images/tv-shows/billions-bg.jpg);
+    background-size: cover;
+    background-position: center;
+}
