--- a/hulu clone/styles.css
+++ b/hulu clone/styles.css
@@ -15,6 +15,7 @@ html {
 body {
     font-family: 'Spline Sans', sans-serif;
     word-spacing: 2px;
+    line-height: 200%;
 }
 
 a {
@@ -143,7 +144,7 @@ a:hover {
 
 .section-heading {
     color: #fff;
-    font-size: 4rem;
+    font-size: 4.25rem;
 }
 
 #tv-shows-container{
@@ -192,4 +193,69 @@ a:hover {
     background: url(images/tv-shows/billions-bg.jpg);
     background-size: cover;
     background-position: center;
+}
+
+#info {
+    width: 100%;
+    height: 97vh;
+    background: var(--hulu-bg-gray);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    row-gap: 2em;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+#channels {
+    width: 100%;
+    height: 100vh;
+    background: url(images/channels/basketball-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+#channels-contents{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    row-gap: 3em;
+    position: absolute;
+    top: 160px;
+    left: 250px;
+}
+
+.channel-btn{
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    color: rgba(255,255,255,0.4);
+    font-weight: bolder;
+    padding-bottom: 1.5em;
+    cursor: pointer;
+}
+
+.channel-btn:hover{
+    color: rgba(214, 212, 212, 0.4);
+}
+
+.active-btn{
+    color: #fff;
+    border-bottom: #fff solid 5px;
+}
+
+#channel-icons-container{
+display: flex;
+column-gap: 2em;
+}
+
+.icon-container{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #fff;
 }
