--- a/car driving game/styles.css
+++ b/car driving game/styles.css
@@ -76,3 +76,18 @@ body{
 .blue {
     background: blue;
 }
+
+#menue{
+    width: 70%;
+    height: 40%;
+    z-index: 1;
+    background-color: rgba(255, 13, 13, 0.8);
+    background: #000;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
