semi completed-table section

--- a/hulu clone/styles.css
+++ b/hulu clone/styles.css
@@ -10,6 +10,8 @@ html {
 --hulu-bg-gray: #151516;
 --hulu-footer-bg-gray: #f5f6f7;;
 --hulu-pill-bg-gray: #67728A;;
+--hulu-pill-table-border-gray: #ededf5;;
+--hulu-table-bg-color: #fcfcfc;
 }
 
 body {
@@ -271,12 +273,19 @@ column-gap: 2em;
 
 #plan-selection{
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     row-gap: 1.75em;
+}
+
+#plan-selection table, th, td {
+    border-top: 0.75px solid var(--hulu-pill-table-border-gray);
+    border-bottom: 0.75px solid var(--hulu-pill-table-border-gray);
+    border-collapse: collapse;
+    padding: 1.25em;
 }
 
 #plan-selection-table-heading-logo{
@@ -287,6 +296,7 @@ column-gap: 2em;
 
 #plan-selection-heading {
     color: #000;
+    margin-top: 1.5em;
 }
 
 #plan-selection-text{
@@ -295,8 +305,8 @@ column-gap: 2em;
 
 .bold{
     color: #000;
-    font-weight: bolder;
-    font-size: 1.5rem;
+    font-weight:bolder;
+    font-size: 1.75rem;
 }
 
 #plan-selection-table{
@@ -325,4 +335,66 @@ font-size: 1.75rem;
     flex-direction: column;
     justify-content: flex-start;
     row-gap: 0.5m;
+}
+
+.table-img{
+    width: 10%;
+    height: auto;
+}
+
+.table-button {
+    border: none;
+    background: #000;
+    color: #fff;
+    font-weight: bolder;
+    padding: 1.2em;
+    border-radius: 5px;
+    width: 80%;
+}
+
+.table-button:hover{
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.699);
+}
+
+.table-h4{
+    font-weight: bolder;
+    font-size: 1.2rem;
+    margin: 0.4em;
+    margin-top: 0.1em;
+}
+
+.table-h3 {
+    color: #afafb1;
+    font-size: 0.95rem;
+}
+
+.pill{
+    background: var(--hulu-pill-bg-gray);
+    border-radius: 20px;
+    color: white;
+    font-weight: bold;
+    font-size: 0.75rem;
+    padding: 0.2em;
+    width: 70%;
+    height: auto;
+    margin: auto;
+}
+
+#sticky-table-row{
+    position: sticky;
+    top: 0px;
+    background: #fff;
+}
+
+.no-border{
+    border: none;
+}
+
+.hidden{
+    color: #fff;
+}
+
+.highlighted-column{
+    background: var(--hulu-table-bg-color);
 }
