--- a/Responsive Hiking Landing Page/styles.css
+++ b/Responsive Hiking Landing Page/styles.css
@@ -23,9 +23,10 @@ a{
 #banner{
     width: 100%;
     height: 100vh;
-    background: url(images/header-bg.jpg);
+    background: url(images/tetn-bg.jpg);
     background-size: cover;
     background-position: center;
+    filter: grayscale(20%);
 }
 
 #nav-bar{
@@ -103,7 +104,7 @@ a{
 
 #s1{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     text-align: center;
 }
 
@@ -119,7 +120,7 @@ a{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 5em;
+    margin-bottom: 2em;
 }
 
 .img-container{
@@ -177,3 +178,158 @@ a{
     font-size: 3rem;
 }
 
+#s3{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 2em;
+}
+
+#s3-content{
+    width: 30%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#s3-heading{
+    font-size: 3rem;
+    color: var(--purpish-section-text-color);
+    margin-bottom: 0.75em;
+}
+
+#s3-text{
+    margin-bottom: 1.5em;
+}
+
+
+#s3-img-container{
+    width: 50%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.1em;
+    row-gap: 0.1em;
+}
+
+.s3-img{
+    width: 24vw;
+    height: 43.5vh;
+    object-fit: cover;
+    object-position: center;
+}
+
+#footer{
+    width: 100%;
+    height: 15vh;
+    background: var(--purpish-section-text-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;   
+}
+
+.hide{
+    display: none;
+}
+
+.show{
+    display: block;
+}
+
+#hamburger{
+    width: 1.25rem;
+    width: 1.25rem;
+}
+@media screen and (max-width: 720px) {
+    #s1{
+        height: auto;
+    }
+    
+    #s1-heading{
+        margin-bottom: 0.75em;
+    }
+    
+    #s2-img-container{
+        height: auto;
+        flex-direction: column;
+        row-gap: 3em;
+    }
+    
+    .img-container{
+        height: 50%;
+        width: 100%;
+    }
+    
+    .s2-img{
+        min-height: 50%;
+    }
+    
+    .img-container-heading{
+        font-size: 2rem;
+    }
+    
+    .img-container-text{
+        text-align: center;
+    }
+
+    #s2{
+        justify-content: center;
+    }
+    
+    #s2-content-container{
+        text-align: center;
+    }
+    
+    #s3{
+        height: auto;
+        flex-direction: column;
+        row-gap: 2em;
+    }
+    
+    #s3-content{
+        width: 100%;
+        height: 40vh;
+        justify-content: center;
+        align-items: center;
+        margin: 1em;
+    }
+    
+    #s3-heading{
+        font-size: 1.8rem;
+    }
+    
+    #s3-text{
+        text-align: center;
+    }
+    
+    
+    #s3-img-container{
+        width: 100%;
+        margin-bottom: 2.5em;
+    }
+    
+    .s3-img{
+        width: 50vw;
+        height: 40vh;
+    }
+
+    #footer{
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 420px){
+    .nav-item{
+        display: none;
+    }
+    #hamburger{
+        display: block;
+    }
+}
