--- a/Responsive Hiking Landing Page/styles.css
+++ b/Responsive Hiking Landing Page/styles.css
@@ -197,7 +197,7 @@ a{
 }
 
 #s3-heading{
-    font-size: 3rem;
+    font-size: 2rem;
     color: var(--purpish-section-text-color);
     margin-bottom: 0.75em;
 }
@@ -247,6 +247,15 @@ a{
     width: 1.25rem;
     width: 1.25rem;
 }
+
+#hamburger-window{
+    width: 100%;
+    height: 90vh;
+    background: white;
+    z-index: 5;
+}
+
+
 @media screen and (max-width: 720px) {
     #s1{
         height: auto;
@@ -285,6 +294,7 @@ a{
     
     #s2-content-container{
         text-align: center;
+        margin: 0 0.25em;
     }
     
     #s3{
@@ -325,11 +335,55 @@ a{
     }
 }
 
-@media screen and (max-width: 420px){
+@media screen and (max-width: 530px){
     .nav-item{
         display: none;
     }
     #hamburger{
         display: block;
     }
+
+    #header-heading{
+        font-size: 1rem;
+    }
+
+    #header-text{
+        font-size: 2rem;
+    }
+
+    
+#s1-heading{
+    font-size: 1.75rem;
+    margin-top: 0.12em;
+}
+
+#h2-heading{
+    font-size: 1.75rem;
+}
+
+#s3-heading{
+    font-size: 1.25rem;
+    margin-bottom: 0.25em;
+}
+
+.img-container-heading{
+    font-size: 1.5rem;
+}
+
+#banner{
+    height: 70vh;
+}
+#s2{
+    height: 70vh;
+}
+
+#s3-img-container{
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    row-gap: 0.25em;
+}
+.s3-img{
+    width: 100vw;
+}
 }
