--- a/Responsive Hiking Landing Page/styles.css
+++ b/Responsive Hiking Landing Page/styles.css
@@ -232,7 +232,8 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;   
+    align-items: center;  
+    text-align: center; 
 }
 
 .hide{
@@ -243,17 +244,6 @@ a{
     display: block;
 }
 
-#hamburger{
-    width: 1.25rem;
-    width: 1.25rem;
-}
-
-#hamburger-window{
-    width: 100%;
-    height: 90vh;
-    background: white;
-    z-index: 5;
-}
 
 
 @media screen and (max-width: 720px) {
@@ -336,12 +326,6 @@ a{
 }
 
 @media screen and (max-width: 530px){
-    .nav-item{
-        display: none;
-    }
-    #hamburger{
-        display: block;
-    }
 
     #header-heading{
         font-size: 1rem;
@@ -385,5 +369,25 @@ a{
 }
 .s3-img{
     width: 100vw;
+}
+
+#nav-bar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 13vh;
+}
+
+#nav-menue{
+    display: flex;
+    column-gap: 0.75em;
+    margin: 0.5em auto;
+}
+
+#footer{
+    font-size: 0.65rem;
+    text-align: center;
 }
 }
