--- a/nasheehah/styles.css
+++ b/nasheehah/styles.css
@@ -1,62 +1,183 @@
-.modal{    
-    position: fixed;
-    z-index: 8;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  --main-background: #e9e9e9;
+  --main-lighter-background: #f5f4f4;
+  --nav-background: #0f97cf;
+  --main-green: #1BA78B;
+  --text-gray: #6f6f6f;
+  --layer-2-gradient-green: #41a589;
+  --layer-2-gradient-blue: #1f5d90;
+  --text-blue: #3b98bd;
+}
+
+body{
+  background: var(--main-background);
+  font-family: Roboto, Helvetica, Roboto, Arial, sans-serif;
+}
+
+button {
+  background: none;
+  border: none;
+}
+
+#nav-bar 
+{
+  min-height: 9vh;
+  background: var(--nav-background);
+  color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 0.8rem;
+}
+
+#logo{
+  font-size: 1.35rem;
+  margin: 0 1em;
+}
+
+#main{
+  max-width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+
+#prays-table{
+  min-width: 65%;
+  margin: 2em;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#layer-1{
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#layer-2{
+  width: 95%;
+  min-height: 13vh;
+  background-image: linear-gradient(93deg, var(--layer-2-gradient-blue), var(--layer-2-gradient-green));
+  border-radius: 2.5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1.5em 0.2em 1em 0.2em;
+  color: #fff;
+}
+
+#layer-3{
+  width: 95%;
+  min-height: 15vh;
+  border: rgb(233, 229, 229) solid 1px;
+  border-radius: 2.5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#pray-group{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.small-text{
+font-size: 0.9rem;
+}
+
+.medium-text{
+  font-size: 1rem; 
+}
+
+.x-large-text{
+  font-size: 2.1rem;
+}
+
+.gray-text{
+color: var(--text-gray);
+}
+
+.mb-1{
+  margin-bottom: 0.5rem;
+}
+
+.mt-1{
+  margin-top: 0.5rem;
+}
+
+.mb-1{
+  margin-bottom: 0.5rem;
+}
+
+.mt-1{
+  margin-top: 0.5rem;
+}
+
+.mr-1{
+  margin-right: 0.5rem;
+}
+
+.ml-1{
+  margin-left: 0.5rem;
+}
+
+.mr-2{
+  margin-right: 1rem;
+}
+
+.ml-2{
+  margin-left: 1rem;
+}
+
+.mt-2{
+  margin-top: 1rem;
+}
+
+.mb-2{
+  margin-bottom: 1rem;
+}
+
+.left-align-text{
+  text-align: left;
+}
+
+.bold{
+  font-weight: bold;
+}
+
+.blue-text{
+  color: var(--text-blue);
+}
+
+.gray-text{
+  color: var(--text-gray);
+}
+
+
+
+#layer-4{
+  width: 100%;
+  height: 13vh;
+  background: var(--main-lighter-background);
+  margin: 1.5em 0.2em 0 0.2em;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .hidden{
-display: none;
+  color: var(--main-lighter-background);
 }
-
-
-form {
-    width: 30%;
-    padding: 25px;
-    margin: 25px;
-    box-shadow: 0 2px 5px #f5f5f5;
-    background: #eee;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 7px;
-}
-
-  input {
-    width: 50%;
-    padding: 10px;
-    border: 1px solid #1c87c9;
-    outline: none;
-    border-radius: 7px;
-  }
-
-  .contact-form {
-    width: 20%;
-    padding: 10px;
-    margin: 1em;
-    border: none;
-    background: #1c87c9;
-    font-size: 16px;
-    font-weight: 400;
-    color: #fff;
-  }
-
-  .contact-form:hover {
-    background: #fff;
-    color: #1c87c9;
-    box-shadow: 0 2px 5px #1c87c9;
-  }
-
-  .error{
-      color: red;
-  }
