--- a/Underwater landing page/styles.css
+++ b/Underwater landing page/styles.css
@@ -29,27 +29,130 @@ body {
     justify-content: space-between;
 }
 
-.align-column-center-vertically{
-    align-items: center;
+.flex-space-around{
+    justify-content: space-around;
 }
 
-header{
-    min-height: 100vh;
-    background-image: url(images/background.png);
-    background-size: cover;
-    background-position: center;
+.align-column-center-vertically{
+    align-items: center;
 }
 
 .header-content{
     margin: auto 0;
 }
 
+.aside-img{
+    width: 2.5rem;
+    margin: 0.5rem;
+}
+
+.left-margin-4{
+    margin-left: 4rem;
+}
+
+.right-margin-4{
+    margin-right: 4rem;
+}
+
+.top-margin-1{
+    margin-top: 1.5rem;
+}
+
+.x-large-text{
+    font-size: 4rem;
+}
+
+.row-gap-2{
+    row-gap: 2em;
+}
+
+.mb-1{
+    margin-bottom: 1em;
+}
+.button{
+    color: white;
+    border: #fff solid 2px;
+    border-radius: 25px;
+    background: none;
+    padding: 0.7rem 2rem;
+}
+
+.button:hover{
+    box-shadow:  3px 3px 10px 3px #028d88;
+}
+
+.aside-img:hover{
+    box-shadow:  3px 3px 10px 3px #028d88;
+    border-radius: 50%;
+}
+
+.no-radius:hover{
+    border-radius: 0;
+    box-shadow:  none;
+}
+
+main{
+    min-height: 100vh;
+    display: grid;
+    grid-template-areas:
+        "header aside";
+    grid-template-columns: 4fr 5rem;
+    background-image: url(images/background.png);
+    background-size: cover;
+    background-position: center;
+}
+
+header{
+    grid-area: header;
+}
+
 aside {
     min-height: 100vh;
-    min-width: 3.75rem;
-    background: #000;
-    position: absolute;
-    left: 96%;
-    top: 0px;
-    z-index: 1;
+    background: rgba(0, 0, 0, 0.3);
+    grid-area: aside;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
+#logo{
+    width: 9rem;
+}
+
+.bubble{
+    width: 3rem;
+    animation-name: floatingBubbles;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+.delay-1{
+    animation-delay: 1s;
+}
+
+.delay-2{
+    animation-delay: 2s;
+}
+.delay-3{
+    animation-delay: 3s;
+}
+.delay-4{
+    animation-delay: 4s;
+}
+.delay-5{
+    animation-delay: 5s;
+}
+
+@keyframes floatingBubbles {
+    from {
+        opacity: 0.1;
+        bottom: 0;
+        transform: translate(0, 0)
+    }
+    to {
+        opacity: 0.9;
+        bottom: 70%;
+        transform: translate(0, -500px)
+    }
 }
