--- a/Underwater landing page/styles.css
+++ b/Underwater landing page/styles.css
@@ -162,12 +162,37 @@ aside {
 .over-lay{
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(0, 0, 0, 0.9);
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
     row-gap: 2em;
     z-index: 1;
     position: absolute;
+}
+
+.over-lay .aside-img{
+    width: 4rem;
+}
+
+.over-lay button{
+    margin: 0;
+    width: 10rem;
+}
+
+#close {
+border: none;
+background: none;
+color: #fff;
+font-size: 2rem;
+font-weight: bolder;
+}
+
+.close-wrapper{
+    width: 100%;
+    text-align: right;
 }
 
 .hide{
@@ -232,7 +257,4 @@ aside {
         margin-right: 1em;
     }
 
-    .over-lay{
-        display: flex;
-    }
 }
