--- a/weather-app/styles.css
+++ b/weather-app/styles.css
@@ -8,6 +8,21 @@
 
 html{
     --text-primary-color: #fff;
+    --underline-color: #e2e2e2;
+}
+
+
+li{
+    list-style: none;
+}
+
+a{
+    color: #fff;
+    text-decoration: none;
+}
+
+input[type="submit"] {
+    display: none;
 }
 
 body{
@@ -15,7 +30,7 @@ body{
     height: 100vh;
     display: flex;
     font-family: 'DM Sans', sans-serif;
-    background: url(images/cloudy.jpg);
+    background: url(images/day/cloudy.jpg);
     background-position:center;
     background-size:cover;
 }
@@ -35,11 +50,6 @@ body{
     column-gap: 2em;
 }
 
-.misc-weather-details-container{
-    width: 40%;
-    height: 100%;
-}
-
 #temp-celsius{
     font-size: 5rem;
     font-weight: bolder;
@@ -49,6 +59,59 @@ body{
     font-size: 2rem;
 }
 
+.misc-weather-details-container{
+    width: 40%;
+    height: 100%;
+    color: var(--text-primary-color);
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    backdrop-filter: blur(10px);
+    border: 3px solid transparent;
+    background-clip: padding-box;
+    box-shadow: 10px 10px 15px rgba(45, 55, 68, 0.3);
+}
+
+#search-city-form{
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#city-name{
+    width: 80%;
+    background-color: transparent;
+    border: none;
+    padding-top: 2em;
+    padding-bottom: 1em;
+    border-bottom: 2px solid var(--underline-color);
+}
+
+::placeholder{
+    font-size: 1.2rem;
+    color: #fff;
+}
+
+#city-name:focus{
+    outline: none;
+}
+
+label{
+    width: 20%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#submit-img{
+    width: 25%;
+}
+
+.locations{
+    border-bottom: 2px solid var(--underline-color);
+}
+
 .small-heading {
     font-size: 1.5rem;
     font-weight: bold;
@@ -56,6 +119,27 @@ body{
 
 .bold {
     font-weight: bold;
+}
+
+.space-between{
+    display: flex;
+    justify-content: space-between;
+}
+
+.ml-2{
+    margin-left: 2rem;
+}
+
+.mr-2{
+    margin-right: 2rem;
+}
+
+.mb-2{
+    margin-bottom: 2rem;
+}
+
+.mb-3{
+margin-bottom: 3rem;
 }
 
 .pt-2{
@@ -68,4 +152,76 @@ body{
 
 .pl-2{
     padding-left: 2rem;
+}
+
+.pr-2{
+    padding-right: 2rem;
+}
+
+@media screen and (max-width: 760px) {
+    .main-weather-details{
+        flex-direction: column;
+        row-gap: 2em;
+    }   
+}
+
+@media screen and (max-width: 500px) {
+    body{
+        flex-direction: column;
+    }
+
+    .main-weather-details-container{
+        width: 100%;
+        height: 35%;
+    }
+
+    .main-weather-details{
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        column-gap: 1rem;
+    }
+
+    #temp-celsius{
+        font-size: 3rem;
+    }
+    
+    #city{
+        font-size: 1.5rem;
+    }
+
+    .misc-weather-details-container{
+        width: 100%;
+        height: 65%;
+    }
+
+    .mb-2{
+        margin-bottom: 1rem;
+    }
+    
+    .mb-3{
+    margin-bottom: 2rem;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .main-weather-details{
+        column-gap: 0.75rem;
+    }
+
+    #temp-celsius{
+        font-size: 2rem;
+    }
+    
+    #city{
+        font-size: 1.15rem;
+    }
+
+    .pl-2{
+        padding-left: 1rem;
+    }
+
+    .pr-2{
+        padding-right: 1rem;
+    }
 }
