--- a/weather-app/styles.css
+++ b/weather-app/styles.css
@@ -27,12 +27,13 @@ input[type="submit"] {
 
 body{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     display: flex;
     font-family: 'DM Sans', sans-serif;
     background: url(images/day/cloudy.jpg);
     background-position:center;
     background-size:cover;
+    background-repeat: no-repeat;
 }
 
 .main-weather-details-container{
@@ -96,6 +97,10 @@ body{
     outline: none;
 }
 
+#city-name:focus-visible{
+    background-color: none;
+}
+
 label{
     width: 20%;
     height: auto;
@@ -110,6 +115,21 @@ label{
 
 .locations{
     border-bottom: 2px solid var(--underline-color);
+}
+
+.main-weather-details-column-wrapper{
+    text-align: center;
+}
+
+.forecast-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.conditions-icon{
+    height: auto;
+    width: 3rem;
 }
 
 .small-heading {
@@ -163,6 +183,18 @@ margin-bottom: 3rem;
         flex-direction: column;
         row-gap: 2em;
     }   
+
+    .forecast-container{
+        flex-direction: column;
+    }
+
+    .mb-2{
+        margin-bottom: 1rem;
+    }
+    
+    .mb-3{
+    margin-bottom: 2rem;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -192,19 +224,17 @@ margin-bottom: 3rem;
 
     .misc-weather-details-container{
         width: 100%;
-        height: 65%;
+        height: auto;
     }
 
-    .mb-2{
-        margin-bottom: 1rem;
-    }
-    
-    .mb-3{
-    margin-bottom: 2rem;
+    .forecast-container{
+        flex-direction: row;
     }
 }
 
 @media screen and (max-width: 380px) {
+
+
     .main-weather-details{
         column-gap: 0.75rem;
     }
