--- a/weather-app/styles.css
+++ b/weather-app/styles.css
@@ -35,7 +35,7 @@ input[type="submit"] {
 
 body{
     width: 100%;
-    height: 110vh;
+    height: 100vh;
     display: flex;
     font-family: 'DM Sans', sans-serif;
     background: url(images/day/clear.jpg);
@@ -46,7 +46,7 @@ body{
 
 .main-weather-details-container{
     width: 60%;
-    height: 95%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -78,6 +78,7 @@ body{
     border: 3px solid transparent;
     background-clip: padding-box;
     box-shadow: 10px 10px 15px rgba(45, 55, 68, 0.3);
+    overflow-y: scroll;
 }
 
 #search-city-form{
@@ -137,7 +138,7 @@ label{
 
 .conditions-icon{
     height: auto;
-    width: 3rem;
+    width: 2.5rem;
 }
 
 .small-heading {
