--- a/weather-app/styles.css
+++ b/weather-app/styles.css
@@ -95,6 +95,9 @@ body{
     padding-top: 2em;
     padding-bottom: 1em;
     border-bottom: 2px solid var(--underline-color);
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 
 ::placeholder{
