--- a/Shopping Cart/styles.css
+++ b/Shopping Cart/styles.css
@@ -58,9 +58,9 @@ nav p span{
 
 #productContainer{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 10rem);
     grid-template-rows: auto;
-    column-gap: 0.5rem;
+    column-gap: 0.25rem;
     row-gap: 2rem;
     justify-content: space-evenly;
     margin-inline: 4rem;
@@ -71,10 +71,58 @@ nav p span{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+}
+
+.label{
+    display: flex;
+    column-gap: 1rem;
+    cursor: pointer;
+    color: #fff;
+    transform: translatex(100%);
+    transition: all 750ms;
+}
+
+.label svg{
+    fill: #fff;
+    transition: all 750ms;
+}
+
+
+.product:hover > .label
+{
+    transform: translatex(0);
+    color: black;    
+    display: flex;
+    background: var(--secondary);
+    padding: 0 0.25rem;
+    border-radius: 5px;
+}
+
+.product:hover svg{
+    fill: black;
+}
+
+.product:hover > .label:hover{
+    color: white;
+}
+
+.product:hover > .label:hover > svg{
+    fill: white;
+}
+
+
+
+
+.img-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .product-img{
-    width: 60%;
+    width: 100%;
     height: 70%;
     object-fit: contain;
     object-position: center;
