--- a/Shopping Cart/styles.css
+++ b/Shopping Cart/styles.css
@@ -59,7 +59,7 @@ nav p span{
 #productContainer{
     display: grid;
     grid-template-columns: repeat(4, 10rem);
-    grid-template-rows: auto;
+    
     column-gap: 0.25rem;
     row-gap: 2rem;
     justify-content: space-evenly;
@@ -71,7 +71,7 @@ nav p span{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    height: 20rem;
 }
 
 .label{
@@ -112,10 +112,9 @@ nav p span{
 }
 
 
-
-
 .img-container{
     width: 100%;
+    height: 70%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -123,7 +122,7 @@ nav p span{
 
 .product-img{
     width: 100%;
-    height: 70%;
+    height: 10rem;
     object-fit: contain;
     object-position: center;
 }
