--- a/Shopping Cart/styles.css
+++ b/Shopping Cart/styles.css
@@ -15,7 +15,7 @@ html{
 body {
     font-family: 'Roboto', sans-serif;
     position: relative;
-    min-height: 100vh;
+    overflow-y: scroll;
 }
 
 nav{
@@ -136,16 +136,17 @@ nav p span{
     background: rgba(255, 200, 168, 0.5);
     display: flex;
     justify-content: flex-end;
-    align-items: center;
     z-index: 1;
     position: absolute;
 }
 
+
 .cart-container{
     width: 30%;
-    height: 100%;
+    height: 100vh;
     background: #e7e7e7;
     padding: 1rem;
+    overflow-y:scroll;
 }
 
 .cart-container button:first-child{
