--- a/Shopping Cart/styles.css
+++ b/Shopping Cart/styles.css
@@ -143,10 +143,10 @@ nav p span{
 
 .cart-container{
     width: 30%;
-    height: 100vh;
+    height: 100%;
     background: #e7e7e7;
     padding: 1rem;
-    overflow-y:scroll;
+    overflow-y: scroll;
 }
 
 .cart-container button:first-child{
