--- a/notary app/styles.css
+++ b/notary app/styles.css
@@ -35,6 +35,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 2rem 0;
 }
 
 #book-window{
@@ -47,7 +48,7 @@ body {
 }
 
 .info-heading{
-    padding: 0.5rem 1rem;
+    padding: 0.4rem 1rem;
     background: var(--secondary);
     border-bottom: var(--border-bottom) solid 3px;
     border-top-left-radius: 7px;
@@ -78,7 +79,7 @@ body {
 .info-container{
     background: var(--primary);
     width: 20rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.7rem;
     border-radius: 7px;
 }
 
@@ -87,7 +88,7 @@ body {
 }
 
 .info-container form{
-    margin: 1rem;
+    margin: 0.5rem;
 }
 
 .info-container form input{
@@ -111,7 +112,7 @@ body {
 
 .info-container .list{
     list-style: none;
-    font-size: 0.9rem;
+    font-size: 0.75rem;
     padding: 0.5rem 1rem;
     font-weight: normal;
 }
@@ -125,5 +126,6 @@ body {
 }
 
 #wordCount{
+    font-size: 0.75rem;
     padding: 0.5rem 1rem;
 }
