--- a/Heads or Tails/styles.css
+++ b/Heads or Tails/styles.css
@@ -49,6 +49,10 @@ button{
     cursor: pointer;
 }
 
+.bold {
+    font-weight: bolder;
+}
+
 @media screen  and (max-width: 520px) {
     h1{
         font-size: 1.75rem;
